--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.637.0",
+    "axios": "^0.19.2",
+    "micro": "^9.3.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-inview-monitor": "^2.3.0",
+    "react-modal": "^3.11.2",
+    "react-pose": "^4.0.10",
+    "react-scripts": "2.1.1",
+    "rsuite": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
