--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-inview-monitor": "^2.3.0",
     "react-modal": "^3.11.2",
     "react-pose": "^4.0.10",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "2.1.1",
     "rsuite": "^4.2.1"
   },
