--- a/now.json
+++ b/now.json
@@ -7,6 +7,7 @@
         "profilepic": "@profilepic",
         "samplepdf": "@samplepdf",
         "resumepdf": "@resumepdf",
-        "workingcareerpdf": "@workingcareerpdf"
+        "workingcareerpdf": "@workingcareerpdf",
+        "NODE_OPTIONS": "--openssl-legacy-provider"
     }
 }
